get_activations.3986654.8.err
[=== Module anaconda/3 loaded ===]
[=== Module cudatoolkit/11.7 loaded ===]
  File "get_activations.py", line 130
    names = ['key_proj', 'value_proj', 'query_proj'']
                                                    ^
SyntaxError: EOL while scanning string literal
